--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-aiogram==3.20.0
-aiohttp>=3.9.5
-SQLAlchemy>=2.0.29
-alembic>=1.13.1
-python-dotenv>=1.0.1
+aiogram
+aiohttp
+SQLAlchemy
+alembic
+python-dotenv
 asyncpg
-loguru>=0.7.2
+loguru
 psycopg2-binary
