--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   db:
     image: postgres:16
@@ -34,6 +32,18 @@ services:
     ports:
       - "3000:80"
     restart: always
+    networks:
+      - backend
+
+  api:
+    build:
+      context: ./web_api_service
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+    volumes:
+      - .:/app
     networks:
       - backend
 
