--- a/mock_challengermode/Dockerfile
+++ b/mock_challengermode/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3.13-alpine
+
 WORKDIR /app
-COPY . .
-RUN pip install fastapi uvicorn pydantic
+COPY . /app
+
+RUN pip install fastapi uvicorn
+
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
