api ряльно запустилось не трогай пока эту ветку и докер фаил для апи и здесь логика для добавление фото

--- a/web_api_service/Dockerfile
+++ b/web_api_service/Dockerfile
@@ -2,9 +2,19 @@ FROM python:3.13-alpine
 
 WORKDIR /app
 
-COPY requirements.txt ./
+# ставим зависимости из requirements
+COPY web_api_service/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir "uvicorn[standard]"
 
-COPY . .
+# копируем весь проект целиком (чтобы внутри /app был и bot_service, и web_api_service и migrations)
+COPY web_api_service ./web_api_service
+COPY bot_service   ./bot_service
+COPY migrations    ./migrations
+COPY alembic.ini   .
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# по-хорошему лишнее — но можно:
+ENV PYTHONPATH=/app
+
+CMD ["uvicorn", "web_api_service.main:app", "--host", "0.0.0.0", "--port", "8000"]
+ 
