--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,15 @@
 version: '3.8'
-
 services:
   db:
     image: postgres:16
-    restart: always
+    ports:
+      - "5434:5432"
     environment:
       POSTGRES_DB: nextgencup
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 1231
     volumes:
       - pgdata:/var/lib/postgresql/data
-    ports:
-      - "5433:5432"
-    networks:
-      - nextgencup-net
-
-  bot:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    environment:
-      - PYTHONPATH=/app:$PYTHONPATH
-    restart: always
-    depends_on:
-      - db
-      - mock-api
-    volumes:
-      - .:/app
-    networks:
-      - nextgencup-net
-    extra_hosts:
-      - "auth.challengermode.com:172.29.0.2"  
-
-  api:
-    build:
-      context: ./web_api_service
-    ports:
-      - "8000:8000"
-    depends_on:
-      - db
-      - mock-api
-    volumes:
-      - .:/app
-    networks:
-      - nextgencup-net
-
-  web:
-    build: ./web_service
-    ports:
-      - "3000:80"
-    restart: always
     networks:
       - nextgencup-net
 
@@ -59,6 +19,42 @@ services:
       - "8081:80"
     networks:
       - nextgencup-net
+
+  api:
+    build:
+      context: .                                # КОРЕНЬ проекта!
+      dockerfile: web_api_service/Dockerfile   # путь к Dockerfile внутри проекта
+    ports:
+      - "8001:8000"
+    environment:
+      DATABASE_URL: postgresql+asyncpg://postgres:1231@db:5432/nextgencup
+    depends_on:
+      - db
+      - mock-api
+    networks:
+      - nextgencup-net
+
+  bot:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    depends_on:
+      - db
+      - mock-api
+    networks:
+      - nextgencup-net
+    volumes:
+      - .:/app
+
+  web:
+    build: ./web_service
+    ports:
+      - "3000:80"
+    networks:
+      - nextgencup-net
+    
 
 volumes:
   pgdata:
