--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-aiogram
-aiohttp
-SQLAlchemy
-alembic
-python-dotenv
-asyncpg
-loguru
-psycopg2-binary
-aiogram-calendar
+aiogram==3.20.0
+aiohttp==3.11.18
+SQLAlchemy==2.0.40
+alembic==1.15.2
+python-dotenv==1.1.0
+asyncpg==0.30.0
+loguru==0.7.3
+psycopg2-binary==2.9.10
+aiogram-calendar==0.6.0
